# Dmitriy-kon-fastapi_clean_architecture_template

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
conf/: alembic.ini
scripts/: start.sh
src/app/adapters/: config.py
src/app/adapters/auth/: login_process.py  password_process.py  session_auth.py  sessions_process.py
src/app/adapters/data_access/migrations/: env.py
src/app/adapters/data_access/migrations/versions/: debbbdef3116_initial_tables.py
src/app/adapters/data_access/models/: __init__.py  base.py  user.py
src/app/adapters/data_access/repositories/: user.py
src/app/adapters/di/: main.py
src/app/adapters/di/providers/: adapters.py  usecases.py
src/app/adapters/in_memory_db/: redis_gataway.py
src/app/application/abstraction/: email_processor.py  interactor.py  login_processor.py  password_process.py  session_gateway.py  uow.py
src/app/application/common/: exceptions.py
src/app/application/dto/: user.py
src/app/application/usecases/auth/: check_user_unique.py  login_user.py  register_inactive_user.py  send_email.py
src/app/application/usecases/auth/login/: authorize_user.py  identificate_user.py
src/app/application/usecases/user/: users.py
src/app/domain/common/: entities.py  value_objects.py
src/app/domain/exceptions/: base.py  validate.py
src/app/domain/users/: entities.py  repositories.py  value_object.py
src/app/main/: config.py  web_api.py
src/app/presentation/web_api/exc_handlers/: exc_handlers.py
src/app/presentation/web_api/routers/: auth.py  health_check.py  root.py  user.py
src/app/presentation/web_api/schemas/: limit_offset.py  user.py
src/fastapi_ca_template/adapters/data_access/migrations/: env.py
src/fastapi_ca_template/adapters/data_access/models/: __init__.py  base.py  user.py
src/fastapi_ca_template/application/abstraction/: interactor.py
src/fastapi_ca_template/application/dto/: user.py
src/fastapi_ca_template/domain/common/: entities.py  value_objects.py
src/fastapi_ca_template/domain/exceptions/: validate.py
src/fastapi_ca_template/domain/users/: entities.py  repositories.py  value_object.py
