[tool.poetry]
name = "fastapi-ca-template"
version = "0.1.0"
description = ""
authors = ["Konovalov Dmitriy <dkonowalow@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_ca_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
