[tool.poetry]
name = "fastapi-ca-template"
version = "0.1.0"
description = ""
authors = ["Konovalov Dmitriy <dkonowalow@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_ca_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.2.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
