[tool.poetry]
name = "fastapi-ca-template"
version = "0.1.0"
description = ""
authors = ["Konovalov Dmitriy <dkonowalow@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
redis = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.2.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools]
# package-dir = { "" = "src" }

# [project]
# authors = [{ name = "Konovalov Dmitriy", email = "dkonowalow@gmail.com" }]
# dependencies = [
#     "fastapi>=0.111.0",
#     "sqlalchemy>=2.0.30",
#     "alembic>=1.13.1",
#     "psycopg>=3.1.19",
#     "psycopg-binary>=3.1.19",
#     "pydantic>=2.7.1",
#     "uvicorn>=0.20.0",
# ]
# description = "Template for fastapi project with clean architecture and DDD"
# name = "fastapi-ca-template"
# requires-python = ">=3.12"
# version = "0.1.0"

# [project.optional-dependencies]
# dev = [
#   "ruff>=0.4.4",
#   "mypy>=1.9.0",
#   "pytest>=8.1.1",
#   "pytest-asyncio>=0.23.6",
#   "httpx>=0.27.0",
#   "pre-commit>=3.7.1",
# ]

